fix small cutting off of iframe

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ p, a, h2{
     font-style: normal;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
     article {
         grid-template-columns: 1fr;
     }
